<resources>
    <string name="app_name">Nirogi Harayna</string>
    <string name="gov_en">Government of Haryana</string>
    <string name="gov">हरियाणा सरकार</string>
    <string name="designed_by">Designed and developed by SeMT, CRID</string>
    <string name="content_desc"> Content Owned byHealth Department,<br></br> Government of Haryana.</string>
    <string name="alert">चेतावनी!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="please_wait">Please wait..</string>
    <string name="api_failure">Api Failure !</string>
    <string name="default_notification_channel_id" />
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="we_will_send">we will send an OTP on this number for verification</string>
    <string name="lets_start">Lets start by verifying your mobile number</string>
    <string name="mobile_number">Enter Email Address/Username</string>
    <string name="mobile_number_h"> Email Address/Username</string>
    <string name="no_internet">No internet connection..</string>
    <string name="search_patient">Search Patient</string>
    <string name="welcome">Welcome,</string>
    <string name="select_district">Select District*</string>
    <string name="search_via">Search Via*</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="log_in">Log in</string>
    <string name="welcome_back_please_enter_your_details">Welcome Back! Please enter your details.</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="powered_by_semt">Powered by SeMT, DITECH, Haryana</string>
    <string name="sel_district" >Please Select District</string>
    <string name="income">Income : </string>
    <string name="pppid">PPP ID: </string>
    <string name="father_husband_name">Father/Husband Name : </string>
    <string name="gender">Gender : </string>
    <string name="age">Age : </string>
    <string name="mobile_">Mobile </string>
    <string name="mobile">Mobile : </string>
    <string name="address_">Address : </string>
    <string name="address">Address </string>
    <string name="district">District : </string>
    <string name="district_">District  </string>
    <string name="no_data_found">No Data Found !</string>
    <string name="enter_reference_id">Enter Reference ID</string>
    <string name="test_refrence_id">Am-D-HJGM8462281488</string>
    <string name="enter_pppid">Enter PPPID</string>
    <string name="test_ppid">4SFJ6424</string>
    <string name="age_gender"><![CDATA[Age & Gender]]></string>
    <string name="general_physical_examination">General Physical Examination</string>
    <string name="_1_weight_in_kg">1. Weight (in kg)*</string>
    <string name="_2_height_in_cm">2. Height (in cm)*</string>
    <string name="_3_bmi_kg">3. BMI (kg / ㎡)</string>
    <string name="_4_pulse_per_min">4. Pulse (per min)*</string>
    <string name="_6_pallor">6. Pallor</string>
    <string name="_4_pallor">4. Pallor</string>
    <string name="name">Name :</string>
    <string name="_5_bp_mmhg">5. BP (mmHg)*</string>
    <string name="_6_bp_mmhg">6. BP (mmHg)*</string>
    <string name="_7_jaundice_cyanosis">7. Jaundice/Cyanosis</string>
    <string name="_8_clubbing">8. Clubbing</string>
    <string name="_9_lymphadenopathy">9.Lymphadenopathy</string>
    <string name="_10_pedal_oedema">10. Pedal oedema</string>
    <string name="systemic_examination">Systemic Examination</string>
    <string name="systemic_investigation">Systemic Investigation</string>
    <string name="_3_per_abdomen">3. Per abdomen</string>
    <string name="_4_cns">4. CNS</string>
    <string name="_5_hearing">5. Hearing</string>
    <string name="_6_eye_refraction">6. Eye - Refraction</string>
    <string name="right_eye">Right eye*</string>
    <string name="left_eye">Left eye*</string>
    <string name="colour_blindness">Colour blindness</string>
    <string name="_7_dental_examination">7. Dental examination</string>
    <string name="_8_genital_examination">8. Genital examination</string>
    <string name="_9_breast_examination_for_females">9. Breast examination (for females)</string>
    <string name="mandatory_invest">Mandatory Investigations</string>
    <string name="prescription_if_any">Prescription (IF Any)</string>
    <string name="prescription">Prescription</string>
    <string name="_1_hb_in_g_dl">1. Hb (in g/dl)</string>
    <string name="_2_tlc_cumn">2. TLC (/cumn)</string>
    <string name="_4_packed_cell_volume_in_l_l">4. Packed Cell Volume (in L/L)</string>
    <string name="_5_mean_corpuscular_volume_in_fl">5. Mean Corpuscular Volume (in fL)</string>
    <string name="_6_mean_corpuscular_hemoglobin_in_pg">6. Mean Corpuscular Hemoglobin (in pg)</string>
    <string name="_7_mean_corpuscular_hemoglobin_concentration_in_g_l">7. Mean Corpuscular Hemoglobin Concentration (in g/L)</string>
    <string name="_8_platelet_count_per_m">8. Platelet count (per m ㎥)</string>
    <string name="_9_rdw_cv_in">9. RDW-CV (in % )</string>
    <string name="_10_rdw_sd_in">10. RDW-SD (in % )</string>
    <string name="_11_rbc_count_in_ul">11. RBC count (in ul)</string>
    <string name="_12_rbs_in_mg_dl">12. RBS (in mg/ dL)</string>
    <string name="_13_serum_cholesterol_in_mg_dl">13. Serum cholesterol (in mg/ dL)</string>
    <string name="_14_blood_urea_in_mg_dl">14. Blood urea (in mg/ dL)</string>
    <string name="_15_serum_creatinine_in_mg_dl">15. Serum creatinine (in mg/ dL)</string>
    <string name="_16_urine_routine_examination">16. Urine routine examination</string>
    <string name="_13_urine_routine_examination">13. Urine routine examination</string>
    <string name="_18_urine_routine_examination">18. Urine routine examination</string>
    <string name="_17_relevant_investigation_if_advised_by_specialist">17. Relevant investigation if advised by specialist</string>
    <string name="_14_relevant_investigation_if_advised_by_specialist">14. Relevant investigation if advised by specialist</string>
    <string name="_20_relevant_investigation_if_advised_by_specialist">20. Relevant investigation if advised by specialist</string>
    <string name="_3_dlc">3. DLC</string>
    <string name="neutrophils_in">Neutrophils (in %)</string>
    <string name="lymphocytes_in">Lymphocytes (in % )</string>
    <string name="monocytes_in">Monocytes (in % )</string>
    <string name="eosinophils_in">Eosinophils (in % )</string>
    <string name="basophils_in">Basophils (in % )</string>
    <string name="_2_cvs">2. CVS</string>
    <string name="_1_chest">1. Chest</string>
    <string name="name_of_patient">Name of Patient</string>
    <string name="name_of_facility">Name of Facility</string>
    <string name="name_of_facility_incharge">Name of Facility incharge</string>
    <string name="date">Date</string>
    <string name="reference_id">Reference ID*</string>
    <string name="_3_head_circumference_in_cm">3. Head circumference in cm*</string>
    <string name="_11_congenital_anomalies">11. Congenital anomalies</string>
    <string name="_12_congenital_anomalies">12. Congenital anomalies</string>
    <string name="history_symptoms_complaints">History/symptoms/complaints</string>
    <string name="_9_capillary_refill_time_3_sec"><![CDATA[9. Capillary Refill Time (< 3 sec*]]></string>
    <string name="reference_id_">Reference Id</string>
    <string name="dummy_line">---</string>
    <string name="facility">Facility</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="select_all">Select All</string>
    <string-array name="spinner_district">
         <item>Please select district</item>
    </string-array>
    <string-array name="arr_searchType">
        <item> PPPID </item>
        <item> Reference Number</item>
        <item> Other Details</item>
    </string-array>
    <string-array name="arr_yes_no">
        <item> No </item>
        <item> Yes </item>
    </string-array>
    <string-array name="arr_y_n">
        <item> Yes </item>
        <item> No </item>
    </string-array>
    <string-array name="arr_vitmin_def">
        <item> No </item>
        <item> Night Blindness</item>
        <item> Bitot Spots</item>
        <item> Dryness</item>
    </string-array>
    <string-array name="arr_congestion_an">
        <item> None </item>
        <item> Cleft lip/Palate</item>
        <item> Clubfoot </item>
        <item> Ear Anomaly</item>
        <item> Digital Anomaly </item>
        <item> Spine Anomaly </item>
        <item> Any Other </item>
    </string-array>
    <string-array name="arr_diagnosis_cat_1">
        <item> none </item>
        <item> Anemia</item>
        <item> Malnourishment</item>
        <item> Low Birth Weight</item>
        <item> Tuberculosis</item>
        <item> Carcinoma</item>
        <item> Diabetes mellitus</item>
        <item> Hypertension</item>
        <item> Cardiac Disease</item>
        <item> Stroke</item>
        <item> Others</item>
    </string-array>
    <string-array name="arr_diagnosis">
        <item> none </item>
        <item> Anemia</item>
        <item> Malnourishment</item>
        <item> Low Birth Weight</item>
        <item> Tuberculosis</item>
        <item> Carcinoma</item>
        <item> Diabetes mellitus</item>
        <item> Hypertension</item>
        <item> Cardiac Disease</item>
        <item> Stroke</item>
        <item> Others</item>
    </string-array>
    <string-array name="arr_chest">
        <item> Normal </item>
        <item> Wheeze</item>
        <item> Abnormal Sound </item>
    </string-array>
    <string-array name="arr_cvs">
        <item> Normal </item>
        <item> Abnormal Sound </item>
        <item> Palpitations </item>
        <item> Murmur </item>
    </string-array>
    <string-array name="arr_cvs_">
        <item> Normal </item>
        <item> Abnormal Sound </item>
    </string-array>
    <string-array name="arr_per_abdomen">
        <item> Normal </item>
        <item> Any distension </item>
        <item> Organomegaly </item>
        <item> Dilated veins </item>
    </string-array>
    <string-array name="arr_per_abdomen_">
        <item> Normal </item>
        <item> No abnormality </item>
        <item> Any distension </item>
        <item> Organomegaly </item>
        <item> Dilated veins </item>
        <item> Umbilicus </item>
    </string-array>
    <string-array name="arr_anterior_">
        <item> Normal </item>
        <item> Depressed </item>
        <item> Just Depressed </item>
        <item> Bulging </item>

    </string-array>
    <string-array name="arr_hearing">
        <item> Normal </item>
        <item> Decreased </item>

    </string-array>
    <string-array name="arr_cns">
        <item> Normal </item>
        <item> Conscious </item>
        <item> Altered sensorium </item>
        <item> Abnormal movements </item>
        <item> Power in all 4 limbs </item>
        <item> Sensation in all 4 limbs </item>
    </string-array>
    <string-array name="arr_cns_cat_1">
        <item> Conscious </item>
        <item> Altered sensorium </item>
        <item> Abnormal movements </item>
    </string-array>
    <string-array name="arr_cns_vi">
        <item> Normal </item>
        <item> Conscious </item>
        <item> Altered sensorium </item>
        <item> Abnormal movements </item>
    </string-array>
    <string-array name="arr_dental">
        <item> Normal </item>
        <item> Caries </item>
        <item> Loose denture </item>
        <item> Malocclusion </item>
    </string-array>
    <string-array name="arr_genital">
        <item> Normal </item>
        <item> Abnormal </item>

    </string-array>
    <string-array name="arr_mode_del">
        <item> NVD </item>
        <item> LSCS </item>
    </string-array>
    <string-array name="arr_cry">
        <item> Immediate </item>
        <item> Delayed </item>
    </string-array>
</resources>