<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_grad" >


    <RelativeLayout
        android:id="@+id/relLMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="90dp"
                android:layout_gravity="center"
                android:background="@drawable/nirogi_haryana"
                android:layout_height="90dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/dosis_medium"
                android:gravity="center"
                android:text="@string/log_in"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dosis_regular"
                android:gravity="center"
                android:text="@string/welcome_back_please_enter_your_details"
                android:textColor="@color/colorGray"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/dosis_medium"
                        android:text="@string/mobile_number_h"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:orientation="horizontal">


                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/enEmailUser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:background="#00000000"
                                android:fontFamily="@font/dosis_light"
                                android:hint="@string/mobile_number"
                                android:lines="1"
                                android:text="TestUserK"
                                android:padding="5dp"
                                android:textColor="@color/colorBlack"
                                android:textColorHint="@color/colorGray"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/dosis_medium"
                        android:text="@string/password"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:padding="10dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">


                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/enPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:background="#00000000"
                                android:fontFamily="@font/dosis_light"
                                android:hint="@string/enter_password"
                                android:lines="1"
                                android:inputType="textPassword"
                                android:padding="5dp"
                                android:text="user123@"
                                android:textColor="@color/colorBlack"
                                android:textColorHint="@color/colorGray"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_active"
                    android:fontFamily="@font/dosis_medium"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Sign In"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/powered_by_semt"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom"
                android:textSize="12sp"
                android:fontFamily="@font/dosis_regular"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:text="DITECH, Haryana"
                android:gravity="center"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:layout_gravity="bottom"
                android:fontFamily="@font/dosis_medium"
                android:textSize="12sp"
                android:layout_height="wrap_content" />



            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>



